[tool.poetry]
name = "fastapi-mctools"
version = "0.2.2"
description = "Fastapi mc style tools to make it easier to develop."
authors = ["Jungminchae <minchae3618@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mctools"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.5"
fastapi = { version = "^0.100.0", optional = true }
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
boto3 =  { version = "^1.28.63", optional = true }
httpx = { version = "^0.25.0", optional = true }
redis = { version = "^5.0.1", optional = true }


[tool.poetry.extras]
all = [ "fastapi", "sqlalchemy", "boto3", "httpx", "redis" ]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pymysql = "^1.1.0"
aiosqlite = "^0.19.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
mct = "fastapi_mctools.commands.main:run_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
