[project]
name = "fastapi-mctools"
version = "0.5.1"
description = "Fastapi mc style tools to make it easier to develop."
authors = [
    {name = "Jungminchae", email = "minchae3618@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "click>=8.1.5",
    "fastapi>=0.100.0; extra == 'fastapi'",
    "sqlalchemy[asyncio]>=2.0.23",
    "boto3>=1.28.63; extra == 'boto3'",
    "httpx>=0.25.0; extra == 'httpx'",
    "redis>=5.0.1; extra == 'redis'"
]

[project.optional-dependencies]
all = [
    "fastapi",
    "sqlalchemy[asyncio]",
    "boto3",
    "httpx",
    "redis"
]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pymysql>=1.1.0",
    "aiosqlite>=0.19.0",
    "pytest-mock>=3.12.0"
]

[project.scripts]
mct = "fastapi_mctools.commands.main:command_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-s --testdox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
